--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "npm-run-all": "^4.1.5",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.0"
+    "sequelize": "^6.37.0",
+    "uuid": "^9.0.1"
   }
 }
