--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "server": "nodemon index.js",
     "api": "echo 'Local API listening on PORT 5000' & json-server --watch api/db.json -p 5000 -q",
-    "start": "concurrently \"npm run server\" \"npm run api\""
+    "start": "concurrently \"npm run server\" \"npm run api\"",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -24,5 +25,12 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.0",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
